# elan

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  basics.md  design_philosophy.md  index.md  test_plan.md
docs/comparison/: baseline_workflow.md  dynamic_models.md  summary.md  temporal.md
docs/internals/: baseline_syntax_comparison.md  guardrails.md  implementation_design.md  implementation_roadmap.md  interface_design.md  tool_comparison_plan.md  type_system_requirements.md  workflow_composition_examples.md
docs/learn/: getting-started.md
docs/reference/: python-api.md
elan/: __init__.py  _activation.py  _binding.py  _orchestrator.py  _refs.py  _resolution.py  _routing.py  _run_state.py  _scheduler.py  node.py  result.py  when.py  workflow.py
examples/: getting_started.py  hello_world.py
tests/: test_public_api.py  test_routing_and_branching.py
