[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "elan"
version = "0.1.0"
description = "Graph-native orchestration for dynamic agent and data workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Hugo" },
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["elan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
